--- a/web-site/api/package.json
+++ b/web-site/api/package.json
@@ -1,11 +1,13 @@
 {
   "name": "academia-data-api",
-  "version": "1.0.0",
-  "description": "API para processamento de dados da academia via Excel/CSV",
+  "version": "2.0.0",
+  "description": "API para sistema de gestão da academia com DynamoDB",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "setup-dynamodb": "node setup-dynamodb.js",
+    "setup-sqlite": "echo 'SQLite será inicializado automaticamente'"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -14,12 +16,14 @@
     "xlsx": "^0.18.5",
     "csv-parser": "^3.0.0",
     "fs-extra": "^11.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "aws-sdk": "^2.1490.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["academia", "dashboard", "excel", "csv", "api"],
+  "keywords": ["academia", "dashboard", "dynamodb", "sqlite", "api", "aws"],
   "author": "Academia Força Fitness",
   "license": "MIT"
 }
