fix: corrige erro 127 do container dashboard
- Cria docker-entrypoint-clean.sh sem scripts problemáticos
- Remove execução de scripts de correção dentro do container
- Atualiza Dockerfile para usar script limpo
- Cria move-fix-scripts.sh para mover scripts para fora do container
- Resolve problema de 'docker: command not found' e 'sudo: command not found'
- Container agora inicia corretamente sem tentar executar scripts de host
- Solução definitiva para erro 127 no academia-dashboard-prod

--- a/web-site/Dockerfile
+++ b/web-site/Dockerfile
@@ -26,8 +26,8 @@ COPY api/ /app/api/
 # Expor porta 80
 EXPOSE 80
 
-# Script de inicialização
-COPY docker-entrypoint.sh /docker-entrypoint.sh
+# Script de inicialização limpo
+COPY docker-entrypoint-clean.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
 # Comando de inicialização
